# nerd-reviewer

./: .coveragerc  .gitreview  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
nerdreviewer/: personality.py  reviewer.py  watcher.py
nerdreviewer/reviewers/: anonymous.py
nerdreviewer/scanners/: speller.py
tests/unit/: test.py  test_noop.py
