[metadata]
name = nerd-reviewer
version = 0.0.1
summary = Nerd Reviewer - automates dull daily routine code reviews
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    nerdreviewer

[entry_points]
console_scripts =
     nerd-reviewer = nerdreviwer.cmd.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
